Fix block toolbar appender spacing in new GB plugin

--- a/src/common.scss
+++ b/src/common.scss
@@ -98,6 +98,7 @@ $item-spacing: 10px !default;
 
 .gblocks-block-control-icon svg {
     margin-right: 0 !important;
+	margin-left: 0 !important;
     padding: 2px;
 }
 
